feat: Add Quantity literal support to DSL test framework
Implements .quantity(), .quantityEmpty(), and .quantityArray() methods
for FhirPathModelBuilder using FHIRPath quantity literal syntax
(e.g., "10.5 'mg'").

Follows the existing Coding type pattern with:
- FhirTypedLiteral.toQuantity() for parsing
- YAML harness integration for serialization and type conversion
- TypeFunctionsDslTest updated to use new concise syntax

Reduces Quantity definition verbosity from 4 lines to 1 line.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>